2002-05-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
	fixed a problem with sticky icons

2002-04-22  Mikhael Goikhman  <migo@homemail.com>

	* FvwmIconMan/ConfigFvwmIconMan:
	* FvwmIconMan/FvwmIconMan.1:
	* FvwmIconMan/readconfig.c (read_next_cmd):
	* FvwmTheme/FvwmTheme.1:
	implemented a new FvwmIconMan syntax that uses white spaces instead
	of asterisks, not to be different from other modules

	* FvwmIconMan/xmanager.c:
	removed ## from preprocessor's line win->##field to make gcc happy

	* FvwmConsole/FvwmConsole.c:
	* FvwmConsole/FvwmConsole.h:
	* FvwmConsole/FvwmConsoleC.c:
	* FvwmConsole/FvwmConsoleC.pl.1:
	* FvwmConsole/FvwmConsoleC.pl.in:
	* FvwmConsole/getline.c:
	use $FVWM_USERDIR not $HOME for FvwmConsole history and socket files,
	make these file names more readable, increase history from 50 to 100

2002-04-05  Mikhael Goikhman  <migo@homemail.com>

	* FvwmTheme/FvwmTheme.1:
	restored a correct example

2002-04-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme.1 (follows):
	corrected an example config

2002-04-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (initialize_pager):
	fixed initial internal layout of the pager

2002-03-29  Mikhael Goikhman  <migo@homemail.com>

	* FvwmEvent/FvwmEvent.c (config):
	fixed PlayCmd in audio compatible mode

2002-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/FvwmIconMan.1:
	corrected wrong information about deafult value of ButtonGeometry

2002-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/List.c (IsItemIndexSticky):
	fixed handling of sticky icons in the task bar

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
	fixed DeskOnly option in FvwmTaskBar: cause windows to be added twice
	instead of being removed when moving to a hidden desk

2002-03-08  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.c (PutDataInForm): Update buffer length when
	data read into form by readdata.  Fixes core.
