@@ -1,3 +1,8 @@
+2002-05-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmPager/FvwmPager.c (list_new_desk):
+	fixed core dump
+
 2002-05-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
